--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -7,6 +7,20 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+
+.typing-container {
+    display: inline-block;
+    margin: 0;
+	color: white;
+    padding-left: 1em; 
+	padding-top: 3em;
+}
+
+#typing-text {
+    font-size: 24px;
+}
+
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -1878,7 +1892,7 @@ input, select, textarea {
 		margin: 0 auto;
 		min-height: 100vh;
 		max-width: 100%;
-		padding: 4em 0;
+		padding: 2em 0;
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
