--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2075,20 +2075,10 @@ input, select, textarea {
 						z-index: 1;
 					}
 
-						#main > .panel.intro .pic .arrow:before {
-							position: relative;
-							padding-right: 0;
-							top: 0.125em;
-						}
-
-						#main > .panel.intro .pic .arrow span {
-							display: block;
-							text-indent: -9999px;
-						}
-
-					#main > .panel.intro .pic:hover .arrow {
-						width: 3em;
-						padding-right: 0.25em;
+					#main > .panel.intro .slideshow-container{
+						max-width: 1000px;
+						position: relative;
+						margin: auto;
 					}
 
 				#main > .panel.intro header {
@@ -2156,7 +2146,6 @@ input, select, textarea {
 				}
 
 /* Footer */
-
 	#footer {
 		color: rgba(255, 255, 255, 0.45);
 		text-align: center;
@@ -2206,15 +2195,6 @@ input, select, textarea {
 		}
 
 
-		* {box-sizing:border-box}
-
-		/* Slideshow container */
-		.slideshow-container {
-		max-width: 1000px;
-		position: relative;
-		margin: auto;
-		}
-
 		/* Hide the images by default */
 		.slides {
 		display: none;
@@ -2247,42 +2227,6 @@ input, select, textarea {
 		background-color: rgba(0,0,0,0.8);
 		}
 
-		/* Caption text */
-		.text {
-		color: #f2f2f2;
-		font-size: 15px;
-		padding: 8px 12px;
-		position: absolute;
-		bottom: 8px;
-		width: 100%;
-		text-align: center;
-		}
-
-		/* Number text (1/3 etc) */
-		.numbertext {
-		color: #f2f2f2;
-		font-size: 12px;
-		padding: 8px 12px;
-		position: absolute;
-		top: 0;
-		}
-
-		/* The dots/bullets/indicators */
-		.dot {
-		cursor: pointer;
-		height: 15px;
-		width: 15px;
-		margin: 0 2px;
-		background-color: #bbb;
-		border-radius: 50%;
-		display: inline-block;
-		transition: background-color 0.6s ease;
-		}
-
-		.dot:hover {
-		background-color: #717171;
-		}
-
 		/* Fading animation */
 		.fade {
 		animation-name: fade;
@@ -2292,4 +2236,12 @@ input, select, textarea {
 		@keyframes fade {
 		from {opacity: .4}
 		to {opacity: 1}
+		}
+
+
+
+		#companion {
+			position: fixed;
+    		top: 20px;
+			right: 0;
 		}
